<resources>
    <string name="app_name">Sabhasd</string>

    <string name="mobile_no">+91</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string-array name="admin_menu">
        <item>  मेरा प्रोफाइल</item>
        <item> गैलरी </item>
        <item> सहयोगी से बात करे </item>
        <item> सहयोगी </item>
    </string-array>
    <string name="r_date">Select date</string>
    <string name="r_name">Enter Name</string>
    <string name="r_mobile">Enter Mobile</string>
    <string name="r_email">Enter Email</string>
    <string name="r_address">Enter Address</string>
    <string name="r_mohallah">Enter Mohallah</string>
    <string name="r_wardno">Enter Ward No</string>
    <string name="r_aadhar">Enter Aadhaar No</string>
    <string name="r_voterid">Enter Voterid</string>
    <string name="r_date_of_birth">Date of Birth</string>
    <string name="r_district">Enter District</string>
    <string name="r_uses_type">Enter User Type</string>
</resources>