<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".adminActivityClass.RegisterUser">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/app_bar"/>

        <EditText
            android:id="@+id/txtRMobile"
            android:hint="@string/r_mobile"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="number"
            android:drawablePadding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:drawableTint="@color/darkGrayColor"
            android:fontFamily="@font/sfprof_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <EditText
            android:id="@+id/txtRName"
            android:hint="@string/r_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/darkGrayColor"
            android:fontFamily="@font/sfprof_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRMobile" />


        <EditText
            android:id="@+id/txtDOB"
            android:hint="@string/r_date_of_birth"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/darkGrayColor"
            android:fontFamily="@font/sfprof_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRName" />


        <EditText
            android:id="@+id/txtREmail"
            android:hint="@string/r_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/darkGray"
            android:fontFamily="@font/sfprof_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDOB"/>

        <EditText
            android:id="@+id/txtWardNo"
            android:hint="@string/r_wardno"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/darkGray"
            android:fontFamily="@font/sfprof_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtREmail"/>

        <EditText
            android:id="@+id/txtMohallah"
            android:hint="@string/r_mohallah"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:textSize="14sp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/darkGray"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfprof_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWardNo"/>

        <EditText
            android:id="@+id/txtRAddress"
            android:hint="@string/r_address"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/darkGray"
            android:fontFamily="@font/sfprof_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMohallah" />


        <EditText
            android:id="@+id/txtRAadharNo"
            android:hint="@string/r_aadhar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="number"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/darkGray"
            android:fontFamily="@font/sfprof_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRAddress"/>

        <EditText
            android:id="@+id/txtRVoterid"
            android:hint="@string/r_voterid"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:inputType="text"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/darkGray"
            android:fontFamily="@font/sfprof_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRAadharNo"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Register"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRVoterid"/>

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Login"
            android:textAlignment="center"
            android:textSize="18sp"
            android:fontFamily="@font/sfprof_regular"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"/>

        <ProgressBar
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            android:id="@+id/progressBar"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>